# SOIA_OLD

./: .cproject  .gitignore  .gitmodules  .project  IntelligenceProject.sln  Makefile  README.md  SOIAstd.sln  TEST.txt  readme.md
SOIA/: CMakeLists.txt
SOIA/Binaries/: Environment.lib  Graphics.lib
SOIA/Documentation/: CMakeLists.txt  Doxyfile.in
SOIA/Documentation/Doxygen/: doxygen.cfg  doxysearch.cgi
SOIA/Documentation/Future/: MxU.txt
SOIA/GlobalHeaders/: stdafx.h
SOIA/Manager/Console/: ConsoleManager.cpp  ConsoleManager.h
SOIA/Scripts/CMake/: FileMacros.cmake  FileMacros.txt  GlobalConfiguration.cmake  IncludeScripts.cmake  Logging.cmake  Logging.txt  Operations.txt  ProjectHelpers.txt  ProjectMacros.cmake  ProjectMacros.txt  ThirdPartyHelpers.txt  ThirdPartyMacros.cmake  ThirdPartyMacros.txt
SOIA/Scripts/Workflow/: RTool  build.sh  clean.sh  configure.sh  download.sh  generate.sh  memory.sh  run.sh  soia.sh  thirdparty.sh  uac.bat
SOIA/Scripts/Workflow/Common/: arguments.sh  common.sh  directory.sh  echo.sh  projectvars.sh
SOIA/Source/: CMakeLists.txt  Makefile  Makefile.template.mk  Makefile.template.mkcfg  Project.mkcfg  compile_commands.json
SOIA/Source/Apprentice/: Apprentice.vcxproj  Apprentice.vcxproj.filters  Make.cfg  Makefile  Makefile.generated.mk  Project.mkcfg
SOIA/Source/Apprentice/Core/Classes/: PrivateDefinitions.h
SOIA/Source/Apprentice/Core/Private/: Engine.cpp
SOIA/Source/Apprentice/Core/Public/: Engine.h  Module.h  ModuleConfiguration.h
SOIA/Source/Apprentice/Game/Private/: Game.cpp  Game_SSt.cpp
SOIA/Source/Apprentice/Modules/Private/: ActivationModule.cpp
SOIA/Source/Apprentice/Modules/Public/: ActivationModule.h
SOIA/Source/Apprentice/SSt/Private/: Engine_SSt.cpp  SStModuleConfiguration.cpp
SOIA/Source/Apprentice/SSt/Public/: Engine_SSt.h  SStModuleConfiguration.h
SOIA/Source/Environment/: CMakeLists.txt  ClassDiagram.cd  Environment.vcxproj  Environment.vcxproj.filters  Make.cfg  Makefile  Makefile.generated.mk  Project.mkcfg
SOIA/Source/Environment/Command/Private/: Command.cpp
SOIA/Source/Environment/Command/Public/: Command.h  CommandExecutor.h
SOIA/Source/Environment/CompileTime/: CMakeLists.txt
SOIA/Source/Environment/CompileTime/Public/: ConstExprList.h  StringParser.h
SOIA/Source/Environment/Core/: CMakeLists.txt
SOIA/Source/Environment/Core_E/: CMakeLists.txt
SOIA/Source/Environment/Event/Private/: Event.cpp  EventDispatcher.cpp
SOIA/Source/Environment/Event/Public/: Event.h  EventDetails.h  EventDispatcher.h  EventHandler.h
SOIA/Source/Environment/File/: CMakeLists.txt
SOIA/Source/Environment/File/Private/: File.cpp  FileObject.cpp  FileObjectFactory.cpp  File_DEPRECATED.cpp  PropertyTag.cpp  PropertyTagFactory.cpp  SaveFile.cpp  TextFile.cpp
SOIA/Source/Environment/File/Public/: File.h  FileObject.h  FileObjectFactory.h  File_DEPRECATED.h  PropertyTag.h  PropertyTagFactory.h  SaveFile.h  TextFile.h
SOIA/Source/Environment/File/Tests/: Main.cpp  Test_Platform_Linux_LinuxFileSystemAccess.cpp
SOIA/Source/Environment/Global/Private/: Globals.cpp
SOIA/Source/Environment/Global/Public/: Globals.h  GlobalsImport.h
SOIA/Source/Environment/Graphics/: CMakeLists.txt
SOIA/Source/Environment/GraphicsCore/: CMakeLists.txt
SOIA/Source/Environment/Log/: CMakeLists.txt
SOIA/Source/Environment/MathematicsCore/: CMakeLists.txt
SOIA/Source/Environment/MathematicsCore/Tests/: Main.cpp  Test_DataStructures_Range.cpp
SOIA/Source/Environment/MathematicsRuntime/: CMakeLists.txt
SOIA/Source/Environment/MathematicsRuntime/Private/: Constant.cpp  D1D1GenericFunction.cpp  DefinitionSet.cpp  DynamicMathFunction.cpp  EquationString.cpp  EquationToken.cpp  EquationTokens.cpp  FunctionCache.cpp  FunctionCacheItem.cpp  GenericMathFunction.cpp  MR_Function.cpp  MathContainer.cpp  OP_Add.cpp  OP_CalculateFunction.cpp  OP_Divide.cpp  OP_GreaterThan.cpp  OP_If.cpp  OP_Multiply.cpp  OP_Select.cpp  OP_Substract.cpp  Operation.cpp  (+3 more)
SOIA/Source/Environment/Meta/: CMakeLists.txt
SOIA/Source/Environment/Reflection/: CMakeLists.txt
SOIA/Source/Environment/Text/: CMakeLists.txt
SOIA/Source/Environment/Thread/: CMakeLists.txt
SOIA/Source/Environment/Time/: CMakeLists.txt
SOIA/Source/Graphics/: Graphics.vcxproj  Graphics.vcxproj.filters  Makefile.generated.mkcfg  Project.mkcfg
SOIA/Source/Programs/: CMakeLists.txt
SOIA/Source/Programs/Calculator/: CMakeLists.txt
SOIA/Source/Programs/GraphicsTest/: CMakeLists.txt
SOIA/Source/Programs/SchroedingerApp/: CMakeLists.txt
SOIA/Source/Programs/UnitTest/: Make.cfg  Makefile  Makefile.generated.mkcfg  Project.mkcfg  UnitTest.vcxproj  UnitTest.vcxproj.filters
SOIA/Source/SOIA/: Cache.txt  Makefile.generated.mk  Makefile.generated.mkcfg  Project.mkcfg  SOIA.vcxproj  SOIA.vcxproj.filters  TEST.txt  readme.txt
SOIA/Source/SOIAstd/: Makefile  SOIAstd.vcxproj  SOIAstd.vcxproj.filters  make.cfg
SOIA/Source/SOIAstd/Debug/: TEST.txt
SOIA/Source/Scripts/CMake/: IncludeScripts.cmake  ListOperations.txt  ProjectHelpers.txt
SOIA/Source/Scripts/VSSnippets/: CommentGenerator.snippet
SOIA/Source/Supervisor/: CMakeLists.txt  Makefile.generated.mkcfg  Project.mkcfg  Supervisor.vcxproj  Supervisor.vcxproj.filters  readme.txt
SOIA/Source/Supervisor/AnalysisCore/: CMakeLists.txt
SOIA/Source/Supervisor/Backup/: CMakeLists.txt
SOIA/Source/Supervisor/BlackBoard/: CMakeLists.txt
SOIA/Source/Supervisor/Console/: CMakeLists.txt  ConsoleService.cpp  ConsoleService.h
SOIA/Source/Supervisor/Core_S/: CMakeLists.txt
SOIA/Source/Supervisor/ElementExplorer/: CMakeLists.txt
SOIA/Source/Supervisor/Equation/: CMakeLists.txt
SOIA/Source/Supervisor/OS/: CMakeLists.txt
SOIA/Source/Supervisor/Pipe/: CMakeLists.txt
SOIA/Source/Supervisor/Pipeline/: CMakeLists.txt
SOIA/Source/Supervisor/SOIA/: CMakeLists.txt
SOIA/Source/Supervisor/SOIAvisor/: CMakeLists.txt
SOIA/Source/Supervisor/ToolsCore/: CMakeLists.txt
SOIA/Source/Supervisor/Visualization/: CMakeLists.txt
SOIA/Source/Supervisor/Workspace/: CMakeLists.txt
SOIA/SysInterface/Linux/: lin_launcher.cpp
(+894 files in other folders)
