cmake_minimum_required(VERSION 3.1)

solution_folder(Supervisor)

add_subdirectory(Core_S)
add_subdirectory(Pipeline)
add_subdirectory(Equation)
add_subdirectory(Visualization)
add_subdirectory(ElementExplorer)
add_subdirectory(Console)
add_subdirectory(BlackBoard)
add_subdirectory(OS)
add_subdirectory(SOIA)